--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <div class="pokemon"></div>
       </div>
     </div>
+    <p class="copyright">© 2021 Bruno Ip.</p>
   </div>
+  
   <script type="text/javascript" src="src/js/main.js"></script>
 </body>
 </html>
